# chatClient

./: .gitignore  CMakeLists.txt
config/: app.json
sources/: chatwindow.qss  loginwindow.qss  resources.qrc  styles.qss
src/: loginwindow.cpp  main.cpp
src/api/: auth_api_client.cpp  auth_api_client.h  conversation_api_client.cpp  conversation_api_client.h  file_api_client.cpp  file_api_client.h  friend_api_client.cpp  friend_api_client.h  user_api_client.cpp  user_api_client.h
src/config/: appconfig.cpp  appconfig.h
src/delegate/: messagedelegate.cpp  messagedelegate.h
src/dto/: auth_dto.cpp  auth_dto.h  conversation_dto.cpp  conversation_dto.h  file_dto.cpp  file_dto.h  friend_dto.cpp  friend_dto.h  user_dto.cpp  user_dto.h  ws_dto.cpp  ws_dto.h
src/log/: app_logger.cpp  app_logger.h
src/model/: conversationlistmodel.cpp  conversationlistmodel.h  messagemodel.cpp  messagemodel.h  messagemodelregistry.cpp  messagemodelregistry.h
src/qt_widget/: addfrienddialog.cpp  addfrienddialog.h  chatwindow.cpp  chatwindow.h  loginwindow.cpp  loginwindow.h
src/service/: auth_error_localizer.cpp  auth_error_localizer.h  auth_service.cpp  auth_service.h  conversation_manager.cpp  conversation_manager.h  friend_error_localizer.cpp  friend_error_localizer.h  friend_service.cpp  friend_service.h  user_error_localizer.cpp  user_error_localizer.h
src/view/: messagelistview.cpp  messagelistview.h
src/ws/: chat_ws_client.cpp  chat_ws_client.h
